file(GLOB BINARY_SEARCH_SOURCE_FILES binary_search.cpp)
set(BINARY_SEARCH_SOURCE_FILES binary_search.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_executable(bsearch ${BINARY_SEARCH_SOURCE_FILES})
target_link_libraries (bsearch ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS bsearch RUNTIME DESTINATION bin)

file(GLOB RAII_THREAD_SOURCE_FILES raii_thread.cpp)
set(RAII_THREAD_SOURCE_FILES raii_thread.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_executable(raii_thread ${RAII_THREAD_SOURCE_FILES})
target_link_libraries (raii_thread ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS raii_thread RUNTIME DESTINATION bin)

file(GLOB MUTEXES_THREAD_SOURCE_FILES mutexes.cpp)
set(MUTEXES_THREAD_SOURCE_FILES mutexes.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_executable(mutexes ${MUTEXES_THREAD_SOURCE_FILES})
target_link_libraries (mutexes ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS mutexes RUNTIME DESTINATION bin)

file(GLOB DEADLOCK_THREAD_SOURCE_FILES deadlock.cpp)
set(DEADLOCK_THREAD_SOURCE_FILES deadlock.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_executable(deadlock ${DEADLOCK_THREAD_SOURCE_FILES})
target_link_libraries (deadlock ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS deadlock RUNTIME DESTINATION bin)
