add_executable(avoid-deadlock avoid-deadlock.cpp)
add_executable(user-defined-mtx user-defined-mtx.cpp)

add_executable(async-demo async.cpp)
add_executable(package-task packaged_task.cpp)
add_executable(odd_even_printer odd_even_printer.cpp)
add_executable(parallel-accum parallel-accum.cpp)
add_executable(fut-based-parallel-accum fut-based-parallel-accum.cpp)
add_executable(shared-mutex shared_mutex.cpp)